Changed the return type of getMostOrderedProducts to ProductVM